change files vendors